# tsp-challenge

./: .dockerignore  Dockerfile  README.md  TODO
backend/: CMakeLists.txt  core
backend/src/: CMakeLists.txt  main.cpp  tsp_distance_matrix.cpp  tsp_distance_matrix.h  tsp_io.cpp  tsp_io.h  tsp_run_config.h  tsp_solution_evaluator.hpp  tsp_solver.cpp  tsp_solver.h
backend/test/fixtures/: advancedTest.json  basicTest.json  complexTest.json
experiments/google-geocoding/: distance-matrix.html
frontend/client/: package.json
frontend/client/public/: index.html
frontend/client/src/: App.js  index.js
frontend/client/src/components/: AppWrapper.js  MapDirection.js  TspMapWrapper.js  TspRoute.js  TspSearchForm.js  TspTargetList.js
frontend/client/src/components/styles/: responsiveMap.css
frontend/client/src/constants/: config.js
frontend/client/src/processing/: calculateRoundTrip.js  distanceMatrix.js  fallbackDistance.js
frontend/server/: package.json  processes.json
frontend/server/src/: index.js
frontend/server/src/routes/: solver.js
